refactor: minor fixes of code smells